# raylib-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: main.rs
examples/: Cargo.toml
examples/core/: core_2d_camera.rs  core_2d_camera_mouse_zoom.rs  core_basic_screen_manager.rs  core_basic_window.rs
examples/text/: text_rectangle_bounds.rs
raygui/: Cargo.toml
raygui-sys/: Cargo.toml  build.rs
raygui-sys/binding/: binding.h  raygui.h  raylib.h  rgui_wrapper.c
raygui-sys/src/: lib.rs
raygui/src/: lib.rs
raylib/: Cargo.toml  Web.toml
raylib-sys/: Cargo.toml  build.rs
raylib-sys/binding/: binding.h  utils_log.c  utils_log.cpp  utils_log.h
raylib-sys/src/: camera.rs  color.rs  lib.rs  math.rs
raylib-test/: Cargo.toml
raylib-test/src/: lib.rs  shader.rs
raylib/examples/samples/: arkanoid.rs  asteroids.rs  camera2D.rs  floppy.rs
raylib/src/: audio.rs  buffer.rs  consts.rs  lib.rs  macros.rs  prelude.rs
raylib/src/core/: audio.rs  callbacks.rs  camera.rs  data.rs  drawing.rs  error.rs  file.rs  input.rs  math.rs  misc.rs  mod.rs  models.rs  shaders.rs  text.rs  texture.rs  vr.rs  window.rs
samples/: Cargo.toml
showcase/: Cargo.toml
