[package]
name = "raylib-sys"
version = "5.0.0"
authors = ["DeltaPHC <phclem@protonmail.com>", "TSnake41 <tsnake@outlook.fr>"]
license = "Zlib"
description = "Raw FFI bindings for Raylib"
documentation = "https://docs.rs/raylib-sys"
repository = "https://github.com/deltaphc/raylib-rs"
keywords = ["bindings", "raylib", "gamedev", "ffi"]
categories = ["external-ffi-bindings"]
edition = "2021"
exclude = [
    "raylib/examples/*",
    "raylib/projects/*",
    "raylib/templates/*"
]

[dependencies]
mint = "0.5"

[build-dependencies]
fs_extra = "1.3"
cmake = "0.1"
cc = "1.0"
bindgen = "0.68"

[features]
default = []
# Build Raylib headless for docs. Up to you to link
nobuild = []

# Build for wayland on linux. Should fix #119
wayland = []

# Use DRM platform on linux.
drm = []

# OpenGL stuff, intended for fixing #122
opengl_33 = []
opengl_21 = []
opengl_11 = []
opengl_es_20 = []
opengl_es_30 = []