[package]
name = "raylib"
version = "5.5.0"
authors = ["DeltaPHC <phclem@protonmail.com>"]
license = "Zlib"
readme = "../README.md"
description = "Safe Rust bindings for Raylib."
documentation = "https://docs.rs/raylib"
repository = "https://github.com/raylib-rs/raylib-rs"
keywords = ["bindings", "raylib", "gamedev"]
categories = ["api-bindings", "game-engines", "graphics"]
edition = "2018"
autoexamples = false

[dependencies]
raylib-sys = { version = "5.5.0", path = "../raylib-sys" }
libc = "0.2.45"
lazy_static = "1.2.0"
cfg-if = "1.0.0"
serde = { version = "1.0.125", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }

mint = { version = "0.5.9", optional = true }
parking_lot = "0.12.1"

specs-derive = "0.4.1"
thiserror = "1.0.61"

[dev-dependencies]
structopt = "0.3"
rand = "0.8.5"
arr_macro = "0.1.3"

[dependencies.specs]
version = "0.16.1"
default-features = false

[features]
nightly = []
with_serde = ["serde", "serde_json"]
wayland = ["raylib-sys/wayland"]
convert_mint = ["mint"]
custom_frame_control = ["raylib-sys/custom_frame_control"]
opengl_33 = ["raylib-sys/opengl_33"]
opengl_21 = ["raylib-sys/opengl_21"]
opengl_es_20 = ["raylib-sys/opengl_es_20"]
noscreenshot = ["raylib-sys/noscreenshot"]
nogif = ["raylib-sys/nogif"]

[[example]]
name = "specs"
path = "../examples/specs.rs"
doc-scrape-examples = true

[[example]]
name = "rgui"
path = "../examples/rgui.rs"
doc-scrape-examples = true

[[example]]
name = "arkanoid"
path = "../examples/arkanoid.rs"
doc-scrape-examples = true

[[example]]
name = "logo"
path = "../examples/logo.rs"
doc-scrape-examples = true


[[example]]
name = "camera2D"
path = "../examples/camera2D.rs"
doc-scrape-examples = true

[[example]]
name = "raymarch"
path = "../examples/raymarch.rs"
doc-scrape-examples = true

[[example]]
name = "font"
path = "../examples/font.rs"
doc-scrape-examples = true

[[example]]
name = "drop"
path = "../examples/drop.rs"
doc-scrape-examples = true

[[example]]
name = "texture"
path = "../examples/texture.rs"
doc-scrape-examples = true

[[example]]
name = "yaw_pitch_roll"
path = "../examples/yaw_pitch_roll.rs"
doc-scrape-examples = true

[[example]]
name = "roguelike"
path = "../examples/roguelike.rs"
required-features = ["with_serde"]
doc-scrape-examples = true

[[example]]
name = "input"
path = "../examples/input.rs"
doc-scrape-examples = true

[[example]]
name = "3d_camera_first_person"
path = "../examples/3d_camera_first_person.rs"
doc-scrape-examples = true

[[example]]
name = "model_shader"
path = "../examples/model_shader.rs"
doc-scrape-examples = true

[[example]]
name = "extensions"
path = "../examples/extensions.rs"
doc-scrape-examples = true

[[example]]
name = "asteroids"
path = "../examples/asteroids.rs"
doc-scrape-examples = true

[[example]]
name = "floppy"
path = "../examples/floppy.rs"
doc-scrape-examples = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
